force-app/main/default/objects/NSF_Section__c/NSF_Section__c.object-meta.xml
<CustomObject>
    <label>NSF Section</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NSF Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>