force-app/main/default/objects/NSF_Section__c/fields/Is_Starred_Section__c.field-meta.xml
<CustomField>
    <fullName>Is_Starred_Section__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Starred Section</label>
    <type>Checkbox</type>
</CustomField>