force-app/main/default/objects/NSF_Section__c/fields/NSF_NotebookId__c.field-meta.xml
<CustomField>
    <fullName>NSF_NotebookId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notebook</label>
    <referenceTo>NSF_Notebook__c</referenceTo>
    <relationshipLabel>Sections</relationshipLabel>
    <relationshipName>NSF_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>